--- a/ClientAPI/src/app/app.component.html
+++ b/ClientAPI/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nav>
-  <span><div #smallScreenDropMenuTriger (click)="dropMenu($event)">Menu</div></span>
+  <span><div #smallScreenDropMenuTrigger (click)="dropMenu($event)">Menu</div></span>
 
   <ul #dropmenu (click)="dropMenu($event)">
-    <li><a (click)="onSelect($event)" routerLink="main">Main</a></li>
-    <li><a (click)="onSelect($event)" routerLink="products">Products</a></li>
-    <li><a (click)="onSelect($event)" routerLink="contact">Contact</a></li>
-    <li><a id='account' (click)="onSelect($event)" [routerLink]="accountUrl">Login</a></li>
+    <li><a id="main" routerLink="main">Main</a></li>
+    <li><a id="products" routerLink="products">Products</a></li>
+    <li><a id="contact" routerLink="contact">Contact</a></li>
+    <li><a id="account" [routerLink]="accountUrl">Login</a></li>
   </ul>
 </nav>
 <div (click)="dropMenu($event)">
