Add new feature to products filter
added params to url when filtering

--- a/ClientAPI/src/app/products/products.component.html
+++ b/ClientAPI/src/app/products/products.component.html
@@ -17,6 +17,8 @@
             <app-laptop-bag-filter *ngIf="category.value === 'laptopBag'" (filterEvent)="changeFilter($event)"></app-laptop-bag-filter>
 
             <button (click)="apply(category.value); sideBar()">Apply</button>
+            <br>
+            <button (click)="clear(category); sideBar();">Clear</button>
         </div>
     </div>
     <div id="right">
