--- a/ClientAPI/src/app/products/upload/upload.component.html
+++ b/ClientAPI/src/app/products/upload/upload.component.html
@@ -4,7 +4,7 @@
         <div>
             <select #product>
                 <div></div>
-                <option value="asd">--Select product--</option>
+                <option value="">--Select product--</option>
                 <option value="laptop">Laptop</option>
                 <option value="laptop-bag">Laptop bag</option>
             </select>
@@ -24,18 +24,3 @@
 
     </div>
 </div>
-
-
-
-
-
-<!-- <input type="file" #file style="display: none;" (change)="uploadFile(file.files)" accept="image/jpeg">
-<button (click)="file.click()">Upload File</button>
-<div>
-    <span *ngIf="progress > 0">
-        {{progress}}%
-    </span>
-    <span *ngIf="message">
-        {{message}}
-    </span>
-</div> -->
