--- a/ClientAPI/src/app/account/details-page/details-page.component.html
+++ b/ClientAPI/src/app/account/details-page/details-page.component.html
@@ -24,7 +24,7 @@
                     <td>{{user?.roleName}}</td>
                 </tr>
             </table>
-            <div class="btn-con"><button (click)="logout()">Logout</button></div>
+            <div class="btn-con"><button (click)="Logout()">Logout</button></div>
         </div>
     </div>
 </div>
