--- a/ClientAPI/src/app/account/register-page/register-page.component.html
+++ b/ClientAPI/src/app/account/register-page/register-page.component.html
@@ -1,20 +1,21 @@
 <div class="wrapper">
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="registerForm" (ngSubmit)="OnSubmit()">
     <p>Register</p>
     <div>
       <div *ngIf="incorrect" class="alert">
         User exist!
       </div>
     </div>
+    <br>
     <!--first name-->
     <div class="form-element">
       <!--alert box start-->
       <div>
         <div
           class="alert"
-          *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+          *ngIf="FirstName.invalid && (FirstName.dirty || FirstName.touched)"
         >
-          <div *ngIf="firstName.errors?.required">First Name is required!</div>
+          <div *ngIf="FirstName.errors?.required">First Name is required!</div>
         </div>
       </div>
       <!--alert box end-->
@@ -30,9 +31,9 @@
       <div>
         <div
           class="alert"
-          *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+          *ngIf="LastName.invalid && (LastName.dirty || LastName.touched)"
         >
-          <div *ngIf="lastName.errors?.required">Last name is required!</div>
+          <div *ngIf="LastName.errors?.required">Last name is required!</div>
         </div>
       </div>
       <!--alert box end-->
@@ -48,10 +49,10 @@
       <div>
         <div
           class="alert"
-          *ngIf="email.invalid && (email.dirty || email.touched)"
+          *ngIf="Email.invalid && (Email.dirty || Email.touched)"
         >
-          <div *ngIf="email.errors?.required">Email is required!</div>
-          <div *ngIf="email.errors?.email">Invalid email!</div>
+          <div *ngIf="Email.errors?.required">Email is required!</div>
+          <div *ngIf="Email.errors?.Email">Invalid email!</div>
         </div>
       </div>
       <!--alert box end-->
@@ -67,10 +68,10 @@
       <div>
         <div
           class="alert"
-          *ngIf="password.invalid && (password.dirty || password.touched)"
+          *ngIf="Password.invalid && (Password.dirty || Password.touched)"
         >
-          <div *ngIf="password.errors?.required">Password is required!</div>
-          <div *ngIf="password.errors?.minlength">Password must be at least 8 characters long!</div>
+          <div *ngIf="Password.errors?.required">Password is required!</div>
+          <div *ngIf="Password.errors?.minlength">Password must be at least 8 characters long!</div>
         </div>
       </div>
       <!--alert box end-->
@@ -90,10 +91,10 @@
       <div>
         <div
           class="alert"
-          *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)"
+          *ngIf="ConfirmPassword.invalid && (ConfirmPassword.dirty || ConfirmPassword.touched)"
         >
-          <div *ngIf="confirmPassword.errors?.required">Confirm password is required!</div>
-          <div *ngIf="confirmPassword.errors?.notMatching">Password must be same!</div>
+          <div *ngIf="ConfirmPassword.errors?.required">Confirm password is required!</div>
+          <div *ngIf="ConfirmPassword.errors?.notMatching">Password must be same!</div>
         </div>
       </div>
       <!--alert box end-->
